; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/iommu/extr_intel_ctx.c_dmar_get_ctx_for_dev.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/iommu/extr_intel_ctx.c_dmar_get_ctx_for_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dmar_ctx = type { i32 }
%struct.dmar_unit = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.dmar_ctx* @dmar_get_ctx_for_dev(%struct.dmar_unit* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.dmar_unit*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  store %struct.dmar_unit* %0, %struct.dmar_unit** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @pci_get_domain(i32 %16)
  store i32 %17, i32* %11, align 4
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @dmar_dev_depth(i32 %18)
  store i32 %19, i32* %12, align 4
  %20 = load i32, i32* %12, align 4
  %21 = zext i32 %20 to i64
  %22 = call i8* @llvm.stacksave()
  store i8* %22, i8** %14, align 8
  %23 = alloca i32, i64 %21, align 16
  store i64 %21, i64* %15, align 8
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* %12, align 4
  %26 = call i32 @dmar_dev_path(i32 %24, i32* %13, i32* %23, i32 %25)
  %27 = load %struct.dmar_unit*, %struct.dmar_unit** %6, align 8
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* %8, align 4
  %30 = load i32, i32* %11, align 4
  %31 = load i32, i32* %13, align 4
  %32 = load i32, i32* %12, align 4
  %33 = load i32, i32* %9, align 4
  %34 = load i32, i32* %10, align 4
  %35 = call %struct.dmar_ctx* @dmar_get_ctx_for_dev1(%struct.dmar_unit* %27, i32 %28, i32 %29, i32 %30, i32 %31, i32* %23, i32 %32, i32 %33, i32 %34)
  %36 = load i8*, i8** %14, align 8
  call void @llvm.stackrestore(i8* %36)
  ret %struct.dmar_ctx* %35
}

declare dso_local i32 @pci_get_domain(i32) #1

declare dso_local i32 @dmar_dev_depth(i32) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @dmar_dev_path(i32, i32*, i32*, i32) #1

declare dso_local %struct.dmar_ctx* @dmar_get_ctx_for_dev1(%struct.dmar_unit*, i32, i32, i32, i32, i32*, i32, i32, i32) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
